package http.model.interfaces;

public interface PostFilter extends Filter {

}
