package http.model.interfaces;

public interface PreFilter extends Filter {

}
